fixed spacing of rental options and maximum width of panel

--- a/app/assets/stylesheets/header/menu.scss
+++ b/app/assets/stylesheets/header/menu.scss
@@ -16,68 +16,57 @@
 .rental-dropdown-button {
     text-decoration: none;
     font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-    // font-size: 12px;
-    // line-height: 18px;
-    // font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: normal;
     background: none;
-    border: 0;
-    // box-shadow: none;
-    // color: rgb(0, 0, 0);
-    // cursor: pointer;
-    // height: 50px;
-    // padding: 0 15px;
+    border: none;
+    box-shadow: none;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    height: 50px;
+    padding: 0 15px;
 }
 
 //nav bar options
 .rental-dropdown-content {
     display: none;
+    // display: block;
     position: absolute;
     z-index: 1;
     background-color: white;
-    // width: 200px;
-    // height: 50px;
+    width: 1000px;
 
     // display: flex;
     // justify-content: space-evenly;
     // flex-direction: row;
-    // margin: 10px 10px 10px 10px;
 }
 .areas-container {
-    left:0px;
-
-    // display: flex;
-    // justify-content: space-between;
-    // flex-direction: column;
-    // margin: 10px 10px 10px 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 10px 10px 10px 15px;
 }
 
 .popular-neighborhoods-container {
-    left:0px;
-
-    // display: flex;
-    // flex-direction: column;
-    // margin: 10px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 10px 10px 40px;
 }
 
 .feature-rental {
-    left:0px;
-
-    // width: 170px;
-    // height: 170px;
-    // margin-top: 10px;
-    // margin-left: 35px;
+    width: 170px;
+    height: 170px;
+    margin-top: 10px;
+    margin-left: 35px;
+    margin-right: 20px;
 }
 
 //hovers
 .rental-dropdown:hover .rental-dropdown-content {
-    display: block;
-    background-color: black;
-    // right: 0px;
-
-    // display: flex;
+    display: flex;
     // justify-content: space-evenly;
-    // flex-direction: column;
-    // margin: 10px 10px 10px 10px;
+    flex-direction: row;
 }
 .rental-dropdown:hover .rental-dropdown-button {
     text-decoration: underline;
